# asyncio_web_crawler

./: .gitignore  Dockerfile  README.md  Taskfile.yaml  database.py  generated_async_edgeql.py  justfile  logic.py  main.py  models.py  mypy.ini  pyproject.toml  tasks.py
app/: generated_async_edgeql.py  logic.py  models.py  server.py
app/queries/: create_job.edgeql  get_job_by_id.edgeql  get_jobs.edgeql  update_job.edgeql
app/tests/: test_api.py  test_logic.py
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql
debug/: debug_main.py
tests/: test_api.py  test_logic.py
