[tool.poetry]
name = "web_crawler"
version = "0.1.0"
description = ""
authors = ["Maxime <maxyme@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.62.0"
httpx = "^0.16.1"
uvicorn = {extras = ["standard"], version = "^0.13.0"}
beautifulsoup4 = "^4.9.3"
asyncio-pool = "^0.5.2"
invoke = "^1.4.1"
structlog = "^20.1.0"
databases = {extras = ["sqlite"], version = "^0.4.1"}
async_lru = "^1.0.2"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
pytest = "^6.1.2"
black = "^20.8b1"
requests = "^2.25.0"  # needed for starlette's test_client
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
