[tool.poetry]
name = "web_crawler"
version = "0.1.0"
description = ""
authors = ["Maxime <maxyme@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10.8"
beautifulsoup4 = "^4.11.1"
structlog = "^22.3.0"
async_lru = "^1.0.3"
sanic = "^22.12.0"
scrapy = "^2.7.1"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
pydantic = "^1.10.4"
edgedb = "^1.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
pytest = "^7.2.0"
black = "^22.12.0"
requests = "^2.28.1"  # needed for starlette's test_client
pytest-asyncio = "^0.20.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.205"
pytest-sanic = "^1.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
